gcc/testsuite/gm2/iso/fail/badparamarray.mod
IMPLEMENTATION MODULE badparamarray ;

PROCEDURE foo (a: CHAR) ;
BEGIN

END foo ;

END badparamarray.
